# datapyn

./: .coverage  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  CLEAN_CODE_CHECKLIST.md  CONGRATULATIONS.md  DRIVERS.md  DataProtocoloMag202601.csv  IMPLEMENTACAO_COMPLETA.py  MATERIAL_DESIGN_MIGRATION.md  MIGRATION_GUIDE.md  MIXED_SYNTAX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  TESTE.dpw  TIPS.md  TROUBLESHOOTING.md  UPGRADE_GUIDE.md  WELCOME.txt  build.bat  datapyn.spec  debug_columns.py  examples.py  examples.sql  examples_mixed.py  install.bat  main.py  playground.py  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run.bat  test_editor_system.py  test_install.py
.github/: copilot-instructions.md
docs/: BLOCK_CONNECTIONS.md  BLOCK_CONNECTIONS_SUMMARY.md  IMPORT_FILES_FEATURE.md  SEMANTIC_RELEASE_SETUP.md  VISUAL_GUIDE_FILE_IMPORT.md
scripts/: build.bat  datapyn.spec  install.bat  run.bat
source/: main.py  run.bat
tests/: README.md  __init__.py  conftest.py  test_block_editor.py  test_connection_manager.py  test_context_menu.py  test_database_connector.py  test_editor_system.py  test_editor_theme.py  test_file_import_service.py  test_file_operations.py  test_gui.py  test_install.py  test_integration.py  test_mixed_executor.py  test_new_tab_connection.py  test_package_manager.py  test_panel_manager.py  test_python_last_expression.py  test_results_manager.py  test_session_lifecycle.py  test_session_panels_integration.py  test_session_restoration.py  test_settings_dialog.py  test_shortcut_manager.py  (+9 more)
(+116 files in other folders)
