[project]
name = "DataPyn"
version = "0.0.1"


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.remote]
ignore_token_for_push = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = []
preview = true
exclude = ["tests/*"]
